--- a/boston_housing.ipynb
+++ b/boston_housing.ipynb
@@ -508,7 +508,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 问题 8 - 回答：K折交叉验证法是将全部数据按照比例分成K份，每次取其中一份做验证集，其他k-1份做训练集，计算分数，将获取到的所有分数做一个平均数，就是当前模型的分数，根据模型分数来判断当前模型的优劣；GridSearchCV根据参数CV来构建交叉验证对象；能够得到平均值、标准差和交叉验证等一系列的分数和计算时间；如果不使用交叉验证得到的结果将没有使用后具有说服力，因为验证的数据过少，交叉验证将数据切分之后将每份数据进行验证，所以更具有说服力"
+    "### 问题 8 - 回答：K折交叉验证法是将训练集按照比例分成K份，每次取其中一份做验证集，其他k-1份做训练集，计算分数，将获取到的所有分数做一个平均数，就是当前模型的分数，根据模型分数来判断当前模型的优劣；GridSearchCV根据参数CV来构建交叉验证对象；能够得到平均值、标准差和交叉验证等一系列的分数和计算时间；如果不使用交叉验证得到的结果将没有使用后具有说服力，因为验证的数据过少，交叉验证将数据切分之后将每份数据进行验证，所以更具有说服力"
    ]
   },
   {
